# theMachine

./: .env.example  .gitignore  CLAUDE.md  RELEASE_NOTES.md  alembic.ini  env-guide.md  feature-list.json  increment-request.json  init.ps1  init.sh  locustfile.py  long-task-guide.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  task-progress.md  需求澄清过程.md
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: d28628c2148c_create_core_tables.py  ebbeee7976de_initial_schema_with_all_tables.py
docker/: Dockerfile.api  Dockerfile.mcp  Dockerfile.worker
docs/features/: 2026-03-21-data-model-migrations.md  2026-03-21-git-clone-update.md  2026-03-21-js-prototype-require.md  2026-03-21-keyword-retrieval.md  2026-03-21-project-skeleton-ci.md  2026-03-21-rank-fusion.md  2026-03-22-branch-listing-api.md  2026-03-22-language-filter.md  2026-03-22-mcp-server.md  2026-03-22-nfr-001-query-latency.md  2026-03-22-retrieval-quality-evaluation-reporting.md  2026-03-23-index-worker-docker-image.md  2026-03-23-mcp-server-docker-image.md  2026-03-23-nfr-002-query-throughput.md  2026-03-23-nfr-003-repository-capacity.md  2026-03-23-nfr-004-single-repository-size.md  2026-03-23-nfr-005-service-availability.md  2026-03-23-nfr-006-linear-scalability.md  2026-03-23-nfr-007-single-node-failure-tolerance.md  2026-03-23-query-api-docker-image.md  2026-03-23-rest-api-endpoints.md  2026-03-24-keyword-retrieval.md  2026-03-24-natural-language-query-handler.md  2026-03-24-rest-api-endpoints.md  2026-03-24-semantic-retrieval-vector.md  2026-03-24-symbol-query-handler.md  2026-03-25-fix-delete-repo-index-branch-filter.md  2026-03-25-index-management-tool.md  2026-03-25-mcp-server.md  2026-03-25-repository-resolution-mcp-tool.md  2026-03-25-web-ui-index-management.md  2026-03-25-web-ui-search-page.md  2026-04-01-fix-reindex-api-celery-dispatch.md  2026-04-03-add-psycopg2-binary-dependency.md
docs/plans/: 2026-03-14-code-context-retrieval-design.md  2026-03-15-code-chunking.md  (+53 more)
eval/: repos.json
examples/: 01-health-check.py  01-storage-clients.py  02-data-models.py  03-repository-registration.py  04-git-clone-update.py  05-content-extraction.py  06-code-chunking.py  07-decorated-definition-chunking.py  07-embedding-generation.py  08-java-enum-record-static.py  08-keyword-retrieval.py  09-js-prototype-require-chunking.py  09-semantic-retrieval.py  10-rank-fusion.py  10-ts-enum-namespace-decorator.py  11-embedding-generation.py  11-neural-reranking.py  12-context-response-builder.py  12-keyword-retrieval.py  13-nl-query-handler.py  13-query-handler-nl.py  13-semantic-retrieval.py  14-query-handler-symbol.py  14-rank-fusion.py  14-symbol-query.py  15-neural-reranking.py  15-query-handler-repo-scoped.py  15-repo-scoped-query.py  16-api-key-authentication.py  17-rest-api-endpoints.py  18-mcp-server.py  19-scheduled-index-refresh.py  19-web-ui-search-page.py  20-branch-listing-api.py  20-language-filter.py  21-c-typedef-prototype-enum.py  22-cpp-namespace-template-chunking.py  23-language-filter.py  23-metrics-endpoint.py  24-query-logging.py  (+26 more)
scripts/: .long-task-plugin-root  check_configs.py  check_real_tests.py  get_tool_commands.py  init_project.py  run_availability_test.py  run_capacity_test.py  run_failover_test.py  run_repo_size_test.py  run_scalability_test.py  run_throughput_test.py  run_with_report.py  validate_guide.py
src/: __init__.py
tests/: conftest.py  test_auth.py  test_auth_real.py  test_chunker.py  test_chunker_real_projects.py  test_content_extraction.py  test_content_extractor.py  test_db_session.py  test_doc_chunker.py  test_embedding_encoder.py  test_feature_1_skeleton.py  test_feature_2_clients.py  test_feature_2_models.py  test_feature_33_branch_listing.py  test_feature_34_decorated_definition.py  test_feature_35_java_enum_record_static.py  test_feature_38_c_chunks.py  test_feature_44_mcp_docker.py  test_feature_45_worker_docker.py  test_feature_4_git_cloner.py  test_git_cloner.py  test_handler.py  test_highlighter.py  test_index_writer.py  test_keyword_retriever.py  test_language_filter.py  test_main.py  test_mcp.py  test_mcp_server.py  test_metrics.py  test_models.py  test_neural_reranker.py  test_nfr02_throughput.py  test_nfr03_capacity.py  test_nfr04_repo_size.py  test_nfr05_availability.py  test_nfr06_scalability.py  test_nfr07_failover.py  test_nfr_001_query_latency.py  test_nfr_002_query_throughput.py  (+34 more)
(+186 files in other folders)
