[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-context-retrieval"
version = "0.1.0"
description = "Code Context Retrieval MCP System — hybrid search engine for code context"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "celery==5.4.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "elasticsearch==8.17.0",
    "qdrant-client==1.13.3",
    "redis==5.2.1",
    "sentence-transformers==3.4.1",
    "tree-sitter==0.24.0",
    "tree-sitter-java==0.23.5",
    "tree-sitter-python==0.23.6",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-c==0.23.4",
    "tree-sitter-cpp==0.23.4",
    "mcp==1.9.0",
    "jinja2==3.1.5",
    "pygments==2.19.1",
    "prometheus-client==0.21.1",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.0",
    "mutmut==3.2.0",
    "locust>=2.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real: marks tests as real (no mocks) tests",
]
addopts = "--cov=src --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=short -k 'not test_project_structure and not real and not test_web_ui'"

